hw01/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw01-service
  namespace: hw01
spec:
  type: ClusterIP
  selector:
    app: hw01-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
