hw01/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw01-ingress
  namespace: hw01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /()(health)$
        pathType: Exact
        backend:
          service:
            name: hw01-service
            port:
              number: 9000
      - path: /otusapp/dmytro.tsilynko($|/)(.*)
        pathType: Prefix
        backend:
          service:
            name: hw01-service
            port:
              number: 9000
